--- a/main.html
+++ b/main.html
@@ -3,14 +3,21 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="Pinterest-like Hero Section.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+     <div class="container">
+		 <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"alt="image">
+		 <div class="hero">
+			 <h1>Welcome to my Pinterest clone</h1>
+			 <p>Discover new inspirations and find your favourite ideas</p>
+		 <button class="btn">Explore Now</button>
+	 </div>
+	 </div>
 </body>
 
 </html>
