--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
  <img src="https://images.unsplash.com/photo-1505765050516-f72dcac9c60e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="img">
         </div>
         <div class="col-2">
-a <h1>Welcome to my Pinterest clone</h1>
+ <h1>Welcome to my Pinterest clone</h1>
 <p>Discover new inspirations and find your favourite ideas</p>
 <button class="btn">Explore Now</button>
         </div>
