--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="card">
+    <div class="hero">
         <div class="col-1">
  <img src="https://images.unsplash.com/photo-1505765050516-f72dcac9c60e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="img">
         </div>
