--- a/main.html
+++ b/main.html
@@ -7,16 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="hero">
-        <div class="col-1">
- <img src="https://images.unsplash.com/photo-1505765050516-f72dcac9c60e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="img">
-        </div>
-        <div class="col-2">
- <h1>Welcome to my Pinterest clone</h1>
-<p>Discover new inspirations and find your favourite ideas</p>
-<button class="btn">Explore Now</button>
-        </div>
-
-    </div>
+ <container class="hero">
+	 <img class="img" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" >
+	 <div class="div">
+		 <h1>Welcome to my pinterest clone</h1>
+		 <p>Describe are your feature inntoo demo</p>
+		 <button class="btn">Explore Now</button>
+	 </div>
+ </container>
 </body>
 </html>
