--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 </head>
 <body>
  <container class="hero">
-	 <img class="img" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" >
+	 <div class="image" ><img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" >
+		 </div>
 	 <div class="div">
 		 <h1>Welcome to my pinterest clone</h1>
 		 <p>Describe are your feature inntoo demo</p>
