--- a/main.html
+++ b/main.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Pinterest-like Hero Section.css">
-    <title>Document</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
- <container class="hero">
-	 <div class="image" ><img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" >
-		 </div>
-	 <div class="div">
-		 <h1>Welcome to my pinterest clone</h1>
-		 <p>Describe are your feature inntoo demo</p>
-		 <button class="btn">Explore Now</button>
-	 </div>
- </container>
+	<!-- the entire body must be written by student -->
+	<div class="hero">
+		<div class="image-container">
+			<img class="image" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+		</div>
+		<div class="content">
+			<h1>Welcome to my Pintrest clone</h1>
+			<p>Discover new inspiration and save your favourite ideas</p>
+			<button>Explore Now</button>
+		</div>
+	</div>
+    <script type="text/javascript" src="./script.js">
+</script>
 </body>
+
 </html>
